# remi-blender-addon

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  __init__.py  _decimate_worker.py  alpha_wrap.py  autoremesher.py  baking.py  edit_tools.py  gn_setup.py  install_blender_addon.py  meshlab_wrapper.py  operators.py  ui.py
.github/: release.yml
alpha_wrap_helper/: CMakeLists.txt  main.cpp
instant_meshes/: __init__.py  operators.py  panel.py  properties.py  runtime.py  viewport.py
instant_meshes/_native/: __init__.py
instant_meshes/native/: CMakeLists.txt  README.md  UPSTREAM.md  bindings.cpp  pyproject.toml  session.cpp  session.h
instant_meshes/tests/: blender_smoke.py  blender_topology_regression.py
uv_mapping/: __init__.py  analysis.py  blender_bridge.py  metrics.py  packing.py  settings.py
uv_mapping/_native/: __init__.py
uv_mapping/native/: CMakeLists.txt  README.md  UPSTREAM.md  bindings.cpp
uv_mapping/tests/: blender_uv_regression.py  diagnose_uv_blend.py
